# backend/src/app.js
@@ -12,6 +12,7 @@ const messages = require('./messages');
 const channel = require('./channel');
 const workspace = require('./workspace');
 const dms = require('./dms');
+const names = require('./names')
 
 const app = express();
 app.use(cors());
@@ -40,6 +41,7 @@ app.get('/v0/workspace', workspace.getAllWork);
 app.get('/v0/messages', messages.getAll);
 app.get('/v0/dms', dms.getAll);
 app.get('/v0/dmMessages', dms.getMessages);
+app.get('/v0/name', names.getName);
 
 app.use((err, req, res, next) => {
   res.status(err.status).json({
